--- a/activities.html
+++ b/activities.html
@@ -15,7 +15,7 @@
 	<header>
 			<a href="#" class="logo"><img src="NSS logo.jpeg" height="4%" width="4%"></a>
 			<div class="navbar">
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Teams
       <i class="fa fa-caret-down"></i>
