--- a/workplace_awareness.html
+++ b/workplace_awareness.html
@@ -31,7 +31,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="workplace_awareness.html">Awareness and cleaning</a>
+      <a href="#">Awareness and cleaning</a>
       <a href="#">Birsamunda Bidyapitha</a>
       <a href="#">East Kantajhar</a>
       <a href="#">Jagda Orphanage</a>
