--- a/workplace_traffic.html
+++ b/workplace_traffic.html
@@ -15,7 +15,7 @@
 	<header>
 			<a href="#" class="logo"><img src="NSS logo.jpeg" height="4%" width="4%"></a>
 			<div class="navbar">
-  <a href="index.html">Home</a>
+  <a href="#home">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Teams
       <i class="fa fa-caret-down"></i>
@@ -32,13 +32,13 @@
     </button>
     <div class="dropdown-content">
       <a href="workplace_awareness.html">Awareness and cleaning</a>
-      <a href="#">Birsamunda Bidyapitha</a>
+      <a href="workplace_birsamunda.html">Birsamunda Bidyapitha</a>
       <a href="workplace_eastk.html">East Kantajhar</a>
       <a href="workplace_jagda.html">Jagda Orphanage</a>
       <a href="workplace_lep.html">Leprosy Colony</a>
       <a href="workplace_rec.html">REC Campus School</a>
       <a href="workplace_southk.html">South Kantajhar</a>
-      <a href="workplace_traffic.html">Traffic Awareness Campaign</a>
+      <a href="#">Traffic Awareness Campaign</a>
       <a href="workplace_yoga.html">Yoga Management and Camp Reports</a>
     </div>
   </div>
@@ -71,7 +71,6 @@
     </button>
 </div>
 	</header>
-	<h1>Birsamunda Bidyapitha</h1>
 
 	    
 	    	
