--- a/workplace_awareness.html
+++ b/workplace_awareness.html
@@ -32,14 +32,14 @@
     </button>
     <div class="dropdown-content">
       <a href="#">Awareness and cleaning</a>
-      <a href="#">Birsamunda Bidyapitha</a>
-      <a href="#">East Kantajhar</a>
-      <a href="#">Jagda Orphanage</a>
-      <a href="#">Leprosy Colony</a>
-      <a href="#">REC Campus School</a>
-      <a href="#">South Kantajhar</a>
-      <a href="#">Traffic Awareness Campaign</a>
-      <a href="#">Yoga Management and Camp Reports</a>
+      <a href="workplace_birsamunda.html">Birsamunda Bidyapitha</a>
+      <a href="workplace_eastk.html">East Kantajhar</a>
+      <a href="workplace_jagda.html">Jagda Orphanage</a>
+      <a href="workplace_lep.html">Leprosy Colony</a>
+      <a href="workplace_rec.html">REC Campus School</a>
+      <a href="workplace_southk.html">South Kantajhar</a>
+      <a href="workplace_traffic.html">Traffic Awareness Campaign</a>
+      <a href="workplace_yoga.html">Yoga Management and Camp Reports</a>
     </div>
   </div>
   <div class="dropdown">
