--- a/workplace_birsamunda.html
+++ b/workplace_birsamunda.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header>
-			<a href="#" class="logo"><img src="NSS logo.jpeg" height="4%" width="4%"></a>
+			<a href="#" class="logo"><img src="logo.jpeg" height="3.8%" width="3.8%" style="background-color: #154254;"></a>
 			<div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
