--- a/workplace_yoga.html
+++ b/workplace_yoga.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 	<header>
-			<a href="#" class="logo"><img src="NSS logo.jpeg" height="4%" width="4%"></a>
+			<a href="#" class="logo"><img src="logo.jpeg" height="3.8%" width="3.8%" style="background-color: #154254;"></a>
 			<div class="navbar">
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Teams
       <i class="fa fa-caret-down"></i>
