--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   	<link rel="stylesheet" type="text/css" href="css/style2.css">
   	<script type="text/javascript" src="js/media1.js"></script>
 </head>
-<body>
+<body onLoad="scrollDiv_init()">
 	<header>
 	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold" style="width: 50px"><img src="img/logo.jpeg" height="95%" width="95%" style="display: inline;"></a>
@@ -110,6 +110,48 @@
 	
 
 </div>
+<div id="autoScroll" class="textContainer" onMouseOver="pauseDiv()" onMouseOut="resumeDiv()">
+ <p>bunch of text <hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+</div>
+<script type="text/javascript">
+  ScrollRate = 50;
+
+function scrollDiv_init() {
+  DivElmnt = document.getElementById('autoScroll');
+  ReachedMaxScroll = false;
+  
+  DivElmnt.scrollTop = 0;
+  PreviousScrollTop  = 0;
+  
+  ScrollInterval = setInterval('scrollDiv()', ScrollRate);
+}
+
+function scrollDiv() {
+  
+  if (!ReachedMaxScroll) {
+    DivElmnt.scrollTop = PreviousScrollTop;
+    PreviousScrollTop++;
+    
+    ReachedMaxScroll = DivElmnt.scrollTop >= (DivElmnt.scrollHeight - DivElmnt.offsetHeight);
+  }
+  else {
+    ReachedMaxScroll = (DivElmnt.scrollTop == 0)?false:true;
+    
+    DivElmnt.scrollTop = PreviousScrollTop;
+    PreviousScrollTop--;
+  }
+}
+
+function pauseDiv() {
+  clearInterval(ScrollInterval);
+}
+
+function resumeDiv() {
+  PreviousScrollTop = DivElmnt.scrollTop;
+  ScrollInterval    = setInterval('scrollDiv()', ScrollRate);
+}
+</script>
+
 
 <footer class="site-footer">
       <div class="container">
@@ -121,16 +163,16 @@
           </div>
 
           <div style="display: inline-block;">
-            <h6>Address</h6>
+            <h6 style="padding: 3px;margin: 2px;">Address</h6>
             <div class="content">
 						<div class="place">
-							<span style="color: #ffffff;"><span class="fas fa-map-marker-alt"></span>NIT ROURKELA,Sec-1, Rourkela,769008,Odisha,India</span>	
+							<span style="color: #ffffff;"><span class="fas fa-map-marker-alt" style="padding: 3px;margin: 2px;"></span>NIT ROURKELA,Sec-1, Rourkela,769008,Odisha,India</span>	
 						</div>
 					<div class="phone">
-						<span style="color: #ffffff;"><span class="fas fa-phone-alt"></span>0661-2462001</span>
+						<span style="color: #ffffff;"><span class="fas fa-phone-alt" style="padding: 3px;margin: 2px;"></span>0661-2462001</span>
 					</div>
 					<div class="email">
-						<span style="color: #ffffff;"><span class="fas fa-envelope"></span>info@nitrkl.ac.in</span>
+						<span style="color: #ffffff;"><span class="fas fa-envelope" style="padding: 3px;margin: 2px;"></span>info@nitrkl.ac.in</span>
 					</div>
           </div>
 
@@ -162,8 +204,6 @@
       </div>
 </footer>
 
-
-
 <script>
 var slideIndex = 0;
 showSlides();
@@ -186,5 +226,7 @@ function showSlides() {
 }
 
 </script>
+
+
 </body>
 </html>
