--- a/home.html
+++ b/home.html
@@ -107,9 +107,13 @@
   <span class="dot"></span> 
 </div>
 <div class="intro">
-	
+	 <p class="intro_head">WELCOME TO NSS NIT ROURKELA</p><br>
+   <p>
+     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+   </p>
 
 </div>
+
 <div class="auto_cointainer">
   <p class="auto_head">Announcements</p>
 
@@ -189,7 +193,7 @@ function resumeDiv() {
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">National Service Scheme | NIT Rourkela | Copyright &copy; 2020 All Rights Reserved by 
-         <a href="https://www.nitrkl.ac.in/" target="blank">NIT Rourkela</a>.
+         <a href="https://www.nitrkl.ac.in/" target="blank">NIT Rourkela</a>
             </p><br>
 
           </div>
