--- a/workplace_eastk.html
+++ b/workplace_eastk.html
@@ -15,6 +15,7 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   	<link rel="stylesheet" type="text/css" href="css/style1.css">
   	<link rel="stylesheet" type="text/css" href="css/style2.css">
+    <link rel="stylesheet" type="text/css" href="css/style3.css">
   	<script type="text/javascript" src="js/media1.js"></script>
 </head>
 <body onLoad="scrollDiv_init()">
@@ -79,88 +80,10 @@
         </div>
     </nav>
 </header>
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="img/nitr.jpeg" style="width:100%">
-  <div class="text">Caption Text</div>
+<div class="workplace">
+  <p class="work_head">East Kantajhar</p>
+  <p class="work_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget fringilla nisi. Aliquam dictum, dui id cursus fermentum, purus turpis venenatis nibh, sit amet blandit nibh lorem a massa.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget fringilla nisi. Aliquam dictum, dui id cursus fermentum, purus turpis venenatis nibh, sit amet blandit nibh lorem a massa.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget fringilla nisi. Aliquam dictum, dui id cursus fermentum, purus turpis venenatis nibh, sit amet blandit nibh lorem a massa.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget fringilla nisi. Aliquam dictum, dui id cursus fermentum, purus turpis venenatis nibh, sit amet blandit nibh lorem a massa.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget fringilla nisi. Aliquam dictum, dui id cursus fermentum, purus turpis venenatis nibh, sit amet blandit nibh lorem a massa.</p>
 </div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="img/nitr.jpeg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="img/nitr.jpeg" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-<div class="intro">
-	 <p class="intro_head">WELCOME TO NSS NIT ROURKELA</p><br>
-   <p>
-     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-   </p>
-
-</div>
-
-<div class="auto_cointainer">
-  <p class="auto_head">Announcements</p>
-
-<div id="autoScroll" class="textContainer" onMouseOver="pauseDiv()" onMouseOut="resumeDiv()">
- <p>bunch of text <hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<hr>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-</div>
-</div>
-
-<script type="text/javascript">
-  ScrollRate = 50;
-
-function scrollDiv_init() {
-  DivElmnt = document.getElementById('autoScroll');
-  ReachedMaxScroll = false;
-  
-  DivElmnt.scrollTop = 0;
-  PreviousScrollTop  = 0;
-  
-  ScrollInterval = setInterval('scrollDiv()', ScrollRate);
-}
-
-function scrollDiv() {
-  
-  if (!ReachedMaxScroll) {
-    DivElmnt.scrollTop = PreviousScrollTop;
-    PreviousScrollTop++;
-    
-    ReachedMaxScroll = DivElmnt.scrollTop >= (DivElmnt.scrollHeight - DivElmnt.offsetHeight);
-  }
-  else {
-    ReachedMaxScroll = (DivElmnt.scrollTop == 0)?false:true;
-    
-    DivElmnt.scrollTop = PreviousScrollTop;
-    PreviousScrollTop--;
-  }
-}
-
-function pauseDiv() {
-  clearInterval(ScrollInterval);
-}
-
-function resumeDiv() {
-  PreviousScrollTop = DivElmnt.scrollTop;
-  ScrollInterval    = setInterval('scrollDiv()', ScrollRate);
-}
-</script>
 
 
 <footer class="site-footer">
@@ -214,28 +137,7 @@ function resumeDiv() {
       </div>
 </footer>
 
-<script>
-var slideIndex = 0;
-showSlides();
 
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-
-</script>
 
 
 </body>
