--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
   	<link rel="stylesheet" type="text/css" href="css/style1.css">
   	<link rel="stylesheet" type="text/css" href="css/style2.css">
   	<script type="text/javascript" src="js/media1.js"></script>
+    <script type="text/javascript" src="js/autoscrl.js"></script>
 </head>
 <body onLoad="scrollDiv_init()">
 	<header>
